style: add new branding

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,5 +1,5 @@
-<ion-header color="dark">
-  <ion-toolbar color="dark">
+<ion-header color="secondary">
+  <ion-toolbar color="secondary">
     <img class="header-icon" src="../assets/logo/logo-light.svg" name="logo-light" />
     <ion-icon name="person-circle-outline" slot="end" class="header-icon" size="large" (click)="presentPopover()">
     </ion-icon>
