--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -10,7 +10,7 @@
 
         <ion-row class="ion-justify-content-center">
           <ion-col>
-            <ion-text color="light">
+            <ion-text color="primary">
               <h1>Welcome to CluedTV</h1>
             </ion-text>
           </ion-col>
@@ -54,7 +54,7 @@
               [disabled]="!loginForm.valid"
               fill="solid"
               shape="round"
-              color="success"
+              color="primary"
               strong="true"
             >
               Login
