--- a/src/app/welcome/welcome.page.html
+++ b/src/app/welcome/welcome.page.html
@@ -10,7 +10,7 @@
 
         <ion-row class="justify-content-center">
           <ion-col>
-            <ion-text color="light">
+            <ion-text color="primary">
               <h1>Welcome to CluedTV</h1>
             </ion-text>
           </ion-col>
@@ -37,7 +37,7 @@
 
         <ion-button
           shape="round"
-          color="success"
+          color="primary"
           strong="true"
           expand="full"
           routerLink="/login"
