--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,8 +1,8 @@
 ion-content {
-  --background: var(--ion-color-dark);
+  --background: var(--ion-color-secondary);
 
   div {
-    background-color: var(--ion-color-dark);
+    background-color: var(--ion-color-secondary);
   }
 
   h4 {
