style: update branding

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-header color="secondary">
   <ion-toolbar color="secondary">
-    <img class="header-icon" src="../assets/logo/logo-light.svg" name="logo-light" />
+    <img class="header-icon" src="../assets/logo/logo-clued.svg" name="logo" />
     <ion-icon name="person-circle-outline" slot="end" class="header-icon" size="large" (click)="presentPopover()">
     </ion-icon>
   </ion-toolbar>
