--- a/src/app/plans/plans.page.html
+++ b/src/app/plans/plans.page.html
@@ -57,7 +57,7 @@
             type="button"
             fill="solid"
             shape="round"
-            color="success"
+            color="primary"
             strong="true"
             expand="full"
             (click)="routeSelection()"
