--- a/src/app/profile/profile-plan/profile-plan.page.html
+++ b/src/app/profile/profile-plan/profile-plan.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="dark">
+  <ion-toolbar color="secondary">
     <ion-buttons slot="start" class="button-icon">
       <ion-back-button text="" defaultHref="/home"></ion-back-button>
     </ion-buttons>
