--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -32,8 +32,8 @@ ion-item {
   font-weight: 700;
   font-size: 14px;
   --color: var(--ion-color-light);
-  --background: var(--ion-color-dark);
+  --background: var(--ion-color-tertiary);
   --border-color: var(--ion-color-medium);
   --background-activated: var(--ion-color-dark-shade);
-  --background-hover: var(--ion-color-dark);
+  --background-hover: var(--ion-color-tertiary);
 }
