--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -68,7 +68,7 @@
               [disabled]="!signupForm.valid"
               fill="solid"
               shape="round"
-              color="success"
+              color="primary"
               expand="full"
               strong="true"
             >
