--- a/src/app/stripe-payment/stripe-payment.page.html
+++ b/src/app/stripe-payment/stripe-payment.page.html
@@ -34,7 +34,12 @@
             <!-- Used to display Element errors -->
             <p>{{ cardErrors }}</p>
 
-            <ion-button type="submit" color="success" expand="full">
+            <ion-button type="submit"
+            fill="solid"
+            shape="round"
+            color="primary"
+            expand="full"
+            strong="true">
               Subscribe for ${{ amount || '10'}}.00
             </ion-button>
           </form>
