--- a/src/app/profile/profile-edit/profile-edit.page.scss
+++ b/src/app/profile/profile-edit/profile-edit.page.scss
@@ -1,4 +1,4 @@
 ion-content {
-  --background: var(--ion-color-dark);
+  --background: var(--ion-color-secondary);
   --color: var(--ion-color-light);
 }
