--- a/src/app/profile/profile-plan/profile-plan.page.scss
+++ b/src/app/profile/profile-plan/profile-plan.page.scss
@@ -1,7 +1,7 @@
 ion-content,
 ion-card,
 ion-item {
-  --background: var(--ion-color-dark);
+  --background: var(--ion-color-secondary);
   --color: var(--ion-color-light);
 }
 
