--- a/src/app/success/success.page.html
+++ b/src/app/success/success.page.html
@@ -4,15 +4,17 @@
       <ion-col>
         <div>
           <img src="/assets/logo/logo-dark.svg" />
-          <h1 class="ion-text-center">Success</h1>
-          <p class="ion-text-center">
+          <ion-text color="light" class="ion-text-center">
+            <h1>Thank you so much for supporting this community initiative.</h1>
+          </ion-text>
+          <!-- <p class="ion-text-center">
             Thank you so much for supporting this community initiative.
-          </p>
+          </p> -->
         </div>
 
         <ion-button
           expand="block"
-          color="success"
+          color="primary"
           fill="solid"
           strong="true"
           shape="round"
