--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -11,9 +11,7 @@
         </ion-avatar>
       </ion-col>
       <ion-col size="8">
-        <h4 class="ion-no-padding" color="dark">
-          Welcome
-        </h4>
+        <h4 class="ion-no-padding" color="dark">Welcome</h4>
         <h1>{{ user.displayName }}</h1>
       </ion-col>
     </ion-row>
