--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -9,11 +9,11 @@
 <ion-content scrollY="false">
   <div class="ion-justify-content-center">
     <ion-grid>
-      <ion-row class="ion-justify-content-center ion-padding-horizontal">
-        <ion-col>
+      <ion-row>
+        <ion-col class="ion-justify-content-center ion-padding-horizontal">
           <ion-img
-            class="position-logo-dark"
-            src="../assets/logo/logo-dark.svg"
+            class="position-logo"
+            src="../assets/logo/logo-clued.svg"
             alt="logo"
           ></ion-img>
 
