--- a/src/app/success/success.page.html
+++ b/src/app/success/success.page.html
@@ -3,7 +3,7 @@
     <ion-row class="ion-padding">
       <ion-col>
         <div>
-          <img src="/assets/logo/logo-dark.svg" />
+          <img src="/assets/logo/logo-clued.svg" />
           <ion-text color="light" class="ion-text-center">
             <h1>Thank you so much for supporting this community initiative.</h1>
           </ion-text>
