--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,23 +3,23 @@
 :root {
   /** primary **/
   --ion-color-primary: #fccc27;
-  --ion-color-primary-rgb: 252,204,39;
+  --ion-color-primary-rgb: 252, 204, 39;
   --ion-color-primary-contrast: #000000;
-  --ion-color-primary-contrast-rgb: 0,0,0;
+  --ion-color-primary-contrast-rgb: 0, 0, 0;
   --ion-color-primary-shade: #deb422;
   --ion-color-primary-tint: #fcd13d;
   /** secondary **/
-  --ion-color-secondary: #03152F;
-  --ion-color-secondary-rgb: 3,21,47;
+  --ion-color-secondary: #03152f;
+  --ion-color-secondary-rgb: 3, 21, 47;
   --ion-color-secondary-contrast: #ffffff;
-  --ion-color-secondary-contrast-rgb: 255,255,255;
+  --ion-color-secondary-contrast-rgb: 255, 255, 255;
   --ion-color-secondary-shade: #031229;
   --ion-color-secondary-tint: #1c2c44;
   /** tertiary **/
   --ion-color-tertiary: #000614;
-  --ion-color-tertiary-rgb: 0,6,20;
+  --ion-color-tertiary-rgb: 0, 6, 20;
   --ion-color-tertiary-contrast: #ffffff;
-  --ion-color-tertiary-contrast-rgb: 255,255,255;
+  --ion-color-tertiary-contrast-rgb: 255, 255, 255;
   --ion-color-tertiary-shade: #000512;
   --ion-color-tertiary-tint: #1a1f2c;
   /** success **/
