fix: adjust errors

--- a/src/app/plans/plans.page.scss
+++ b/src/app/plans/plans.page.scss
@@ -23,8 +23,10 @@ ion-content {
   }
 }
 
-.position-logo-clued {
-  height: 13vh;
+.logo-clued {
+  height: 64px;
+  max-width: 180px;
+  margin-left: 20vw;
   width: auto;
 }
 
