--- a/src/app/stripe-payment/stripe-payment.page.html
+++ b/src/app/stripe-payment/stripe-payment.page.html
@@ -17,7 +17,7 @@
       <ion-row class="ion-justify-content-center ion-padding-horizontal">
         <ion-col>
           <ion-img
-            class="position-logo-clued"
+            class="logo-clued"
             src="../assets/logo/logo-clued.svg"
             alt="logo"
           ></ion-img>
