--- a/src/app/stripe-payment/stripe-payment.page.scss
+++ b/src/app/stripe-payment/stripe-payment.page.scss
@@ -42,7 +42,8 @@ ion-content {
   }
 }
 
-.position-logo-clued {
-  height: 13vh;
-  width: auto;
+.logo-clued {
+  height: 64px;
+  max-width: 180px;
+  margin-left: 20vw;
 }
