--- a/android/app/src/main/res/xml/config.xml
+++ b/android/app/src/main/res/xml/config.xml
@@ -24,6 +24,7 @@
   <preference name="Orientation" value="portrait" />
   <preference name="ShowSplashScreenSpinner" value="false" />
   <preference name="ScrollEnabled" value="false" />
+  <preference name="android-minSdkVersion" value="19" />
   <preference name="BackupWebStorage" value="none" />
   <preference name="SplashMaintainAspectRatio" value="true" />
   <preference name="FadeSplashScreenDuration" value="300" />
